--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -3,7 +3,7 @@
   width: 100%;
   position: fixed;
   z-index: 99;
-  background-color: var(--footer-bg);
+  background-color: var(--header-bg);
   backdrop-filter: blur(4px);
 }
 
